--- a/BTL/web_function/navbar_function/login/index.html
+++ b/BTL/web_function/navbar_function/login/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <title>phan1_bai6</title>
+    <title>Đăng nhập</title>
   </head>
 
   <body>
