--- a/BTL/web_function/navbar_function/signup/index.html
+++ b/BTL/web_function/navbar_function/signup/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <title>phan1_bai6</title>
+    <title>Đăng ký</title>
   </head>
 
   <body>
@@ -23,7 +23,7 @@
           <h3>Welcome</h3>
         </div>
         <div class="col-md-9 register-right">
-          <h3 class="register-heading">Sign up</h3>
+          <h3 class="register-heading">Đăng ký</h3>
           <form method="" action="">
             <div class="register-form">
               <div class="row">
