--- a/BTL/product.html
+++ b/BTL/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Sản phẩm</title>
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -259,19 +259,21 @@
     <nav aria-label="Page navigation">
       <ul class="pagination justify-content-center">
         <li class="page-item disabled" id="pre">
-          <a class="page-link" href="#" tabindex="-1">Previous</a>
+          <a class="page-link" href="javascript:void(0)" tabindex="-1"
+            >Previous</a
+          >
         </li>
         <li class="page-item active">
-          <a class="page-link" href="#" id="link1">1</a>
+          <a class="page-link" href="javascript:void(0)" id="link1">1</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="#" id="link2">2</a>
+          <a class="page-link" href="javascript:void(0)" id="link2">2</a>
         </li>
         <li class="page-item">
-          <a class="page-link" href="#" id="link3">3</a>
+          <a class="page-link" href="javascript:void(0)" id="link3">3</a>
         </li>
         <li class="page-item" id="next">
-          <a class="page-link" href="#">Next</a>
+          <a class="page-link" href="javascript:void(0)">Next</a>
         </li>
       </ul>
     </nav>
